--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
-             <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+             <!-- <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
                      aria-hidden="true"></i>
-                 FREE PRINTABLE</a>
+                 FREE PRINTABLE</a> -->
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -85,9 +85,9 @@
             <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
             <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
-            <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+            <!-- <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
                     aria-hidden="true"></i>
-                FREE PRINTABLE</a>
+                FREE PRINTABLE</a> -->
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -167,14 +167,14 @@
         </div>
     </div>
         <!-- Third Parallax Image with Portfolio Text -->
-        <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
+        <!-- <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
             <div class="w3-display-middle"
                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
                 <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">SIGN UP</span>
             </div>
-        </div>
+        </div> -->
   <!-- Begin Mailchimp Signup Form -->
-    <div id="mc_embed_signup" class="w3-display-container w3-center" style="margin: auto;padding: 100px 0px;">
+    <!-- <div id="mc_embed_signup" class="w3-display-container w3-center" style="margin: auto;padding: 100px 0px;">
         <form
             action="https://coryhardmancoaching.us12.list-manage.com/subscribe/post?u=4ddb69cbb17ab44b790615ac2&amp;id=76d8ac9297"
             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
@@ -203,12 +203,12 @@
                 <div id="mce-responses" class="clear foot">
                     <div class="response" id="mce-error-response" style="display:none"></div>
                     <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>
+                </div> -->
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                         name="b_4ddb69cbb17ab44b790615ac2_76d8ac9297" tabindex="-1" value=""></div>
                 <div class="optionalParent">
-                    <div class="clear foot">
+                    <div class="clear foot"> -->
 
 
                       
@@ -216,10 +216,10 @@
 
 
                         <!-- <a href="/downloadables/50 Thoughts Confident Moms Think.pdf" download="free printable Cory Hardman Coaching"> -->
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                        <!-- <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
                             class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
-                            style="background-color: #6200b3!important;">
+                            style="background-color: #6200b3!important;"> -->
 
                        
 
@@ -227,7 +227,7 @@
                                 title="Mailchimp - email marketing made easy and fun"><img
                                     src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
                         </p> -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
         </form>
@@ -251,7 +251,7 @@
             ftypes[5] = 'birthday';
         }(jQuery));
         var $mcj = jQuery.noConflict(true);
-    </script>
+    </script> -->
     <!--End mc_embed_signup-->
 
 
