--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="">
                 <div class="w3-col m6 w3-center w3-padding-large" style="margin-top: 44px;">
-                    <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
+                    <img src="images/portraits/cory_hardman_profile.png" class="w3-card w3-round w3-image"
                         alt="Photo of Me" width="500" height="333">
                 </div>
             </div>
